agrega herramientas de compilación

--- a/core/functions/_strip-unit.scss
+++ b/core/functions/_strip-unit.scss
@@ -3,7 +3,7 @@
 /// @author Hugo Giraudel
 /// @link https://css-tricks.com/snippets/sass/strip-unit-function/
 /// 
-/// @return {int | float} number
+/// @return {int | float} 
 /// @since 0.0.1
 
 @function strip-unit($number) {
