First version of the core fully documented

--- a/config/_config.scss
+++ b/config/_config.scss
@@ -1,10 +1,10 @@
 ////
-///_________________________ Config _________________________ \\
-//
-//Config
-//The various configuration files for the framework
-//@since 1.0.0
-//@author Diego Villaseñor
+///-_________________________ Config _________________________ \\
+////
+////Config
+////The various configuration files for the framework
+////@since 1.0.0
+////@author Diego Villaseñor
 ////
 
 //IMPORTANT: _base must appear after _widths
