--- a/core/base/_basic-styles.scss
+++ b/core/base/_basic-styles.scss
@@ -1,11 +1,13 @@
+@import "_reset.scss";
+@include reset;
+
 /**
-* Base Styles
+* Basic Styles
 * ---------------
 * Edítalos o sobreescríbelos
 *
 */
 
-@import "_reset.scss";
 
 
 /**
