--- a/core/functions/_functions.scss
+++ b/core/functions/_functions.scss
@@ -1,3 +1,7 @@
 //_________________________ Functions _________________________ \\
 
 @import "_ultraligero-legacy-functions";
+@import "_advanced-type-checking";
+@import "_strip-unit";
+@import "_to-number";
+@import "_to-number";
