--- a/core/mixins/_bg-gradient.scss
+++ b/core/mixins/_bg-gradient.scss
@@ -1,12 +1,12 @@
 /// Creates simple background-color gradients from top to bottom.
 /// 
-/// @requires Use of the colors map, and the c() function for returning the color values of the map
+/// @requires {map} $colors
 /// @see _colors.scss
 /// 
 /// 
-/// @params map-key $top top color
-/// @params map-key $bottom bottom color
-/// @params unit $endpoint point where transition ends
+/// @param {map-key} $top top color
+/// @param {map-key} $bottom bottom color
+/// @param {number} $endpoint point where transition ends
 @mixin bg-gradient($top, $bottom, $endpoint: 40%) {
 	background: c($top);
     background: -moz-linear-gradient(top, c($top) 0%,  c($bottom) $endpoint);
