--- a/core/debug/_debug.scss
+++ b/core/debug/_debug.scss
@@ -1,12 +1,15 @@
 //_________________________ Debug _________________________ \\
-/**
- * Scripts for debugging,
- *
- * To use, uncomment a line to activate debugging function or set a variable to true;
- *
- */
-$debug: false;
+/// 
+/// Set to true to enable some or all of this functions
+/// @name debug
+/// @type boolean
+/// @author Diego Villaseñor
+/// @since 1.0.0
+/// 
+$debug: true;
+
 // @import "_borders";//Applies borders to each element
 // @import "_nestedBorders";// Applies different borders deepending on how deep are the elements being nested
 // @import "_nestedHoverBorders";//On hover, applies different borders deepending on how deep are the elements being nested
-//@import "_print-all-maps";//Registered in the $maps map, via mixin maps()
+// @import "_print-all-maps";//Registered in the $maps map, via mixin maps()
+
