--- a/core/mixins/_between.scss
+++ b/core/mixins/_between.scss
@@ -1,5 +1,5 @@
 ///
-/// An "@media" mixin that responds to a smaller-than-given screen width.
+/// An "@media" mixin that responds to a  min and max screen width.
 ///
 /// 
 /// @param  map key or string $min   Map with the names of breaks and their units or only the desired unit or the Map key.
