--- a/core/mixins/_over.scss
+++ b/core/mixins/_over.scss
@@ -1,12 +1,13 @@
-/**
- * An "@media" mixin that responds to a bigger-than-given screen width.
- *
- * Same as the respond-to mixin.
- * 
- * @param  {map || map key || string} $break   Map with the names of breaks and their units or only the desired unit or the Map key.
- * 
- * @return {@media block}    
- */
+///
+/// An "@media" mixin that responds to a bigger-than-given screen width.
+///
+/// 
+/// @param  map key or string $min   Map with the names of breaks and their units or only the desired unit or the Map key.
+/// @param  map key or string $max   Map with the names of breaks and their units or only the desired unit or the Map key.
+/// @author Diego Villaseñor
+/// @since 1.0.0
+/// @content 
+////
 @mixin over($break) {
 	 @if map_has_key($breaks, $break) {
     @media only screen and (min-width: map_get($breaks, $break)) {
