--- a/core/mixins/_selected-link.scss
+++ b/core/mixins/_selected-link.scss
@@ -1,3 +1,14 @@
+///
+/// Styles a link or p that has the .selected class
+///
+/// 
+/// @param  {String} $color
+/// @param  {String} Decoration
+/// @author Diego Villaseñor
+/// @since 1.0.0
+/// @content 
+///
+
 @mixin selected-link($color: '', $decoration: '') {
     &.selected {
         color: $color;
