--- a/core/mixins/_selection.scss
+++ b/core/mixins/_selection.scss
@@ -1,3 +1,11 @@
+///
+/// Background color en selection
+///
+/// 
+/// @param  {String} $color
+/// @since 1.0.0
+///
+
 @mixin selection($color) {
   &::-moz-selection { background: $color; }
   &::selection { background: $color; }
