--- a/core/mixins/preconfig-mixins/_clearfix.scss
+++ b/core/mixins/preconfig-mixins/_clearfix.scss
@@ -7,26 +7,23 @@
 ///2. The use of `table` rather than `block` is only necessary if using
 ///   `:before` to contain the top-margins of child elements.
 ///
-///@author 	Nicolas Gallagher
-///@link http://nicolasgallagher.com/micro-clearfix-hack/
-///
-///
+/// @author 	Nicolas Gallagher
+/// @link http://nicolasgallagher.com/micro-clearfix-hack/
+
 
 @mixin clearfix {
 	&:before,
 	&:after {
-	    content: " "; /* 1 */
-	    display: table; /* 2 */
+	    content: " "; // 1 
+	    display: table; // 2 
 	}
 
 	&:after {
 	    clear: both;
 	}
 
-	/**
-	 * For IE 6/7 only
-	 * Include this rule to trigger hasLayout and contain floats.
-	 */
+	 // For IE 6/7 only
+	 // Include this rule to trigger hasLayout and contain floats.
 	& {
 	    *zoom: 1;
 	}
