--- a/core/mixins/preconfig-mixins/_generador-de-columnas.scss
+++ b/core/mixins/preconfig-mixins/_generador-de-columnas.scss
@@ -1,3 +1,14 @@
+///
+/// Automátically generates columns for a specific break.
+/// @param {string} name of the break
+/// @param {number} Number of columns (equally sized)
+/// @param {string} if columns are going to be called column or cuadro
+/// @see ultraligero legacy functions for the functions cuadros, push_x and centered
+/// @requires cuadros
+/// @requires push_x
+/// @requires push_x
+/// @group ultraligero legacy
+/// @author Roberto Palomino
 @mixin generador-de-columnas($break, $cols, $cuadro_o_columns) {
     
   // @if( $cuadro_o_columns != 'columns' and $cuadro_o_columns != 'cuadro') {@error 'El tercer argumento de este mixin espera el string cuadro o el string columns, se ingreso: #{$cuadro_o_columns} ' }
