preparing mazorca for npm

--- a/core/functions/_advanced-type-checking.scss
+++ b/core/functions/_advanced-type-checking.scss
@@ -58,7 +58,7 @@
   @return is-length($value) or is-percentage($value) or index('top' 'right' 'bottom' 'left' 'center', $value) != null;
 }
 
-/*additions*/
+///additions
 
 @function is-pixel($value) {
   @return is-number($value) and index('px', unit($value)) != null;
