--- a/core/mazorca-boilerplate/mazorca.scss
+++ b/core/mazorca-boilerplate/mazorca.scss
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-/*===Mazorca Core===*/
+//===Mazorca Core===//
 @import "node_modules/mazorca-core/_mazorca-core.scss";
 
 //===Configs===//
