--- a/core/mazorca-boilerplate/mazorca.scss
+++ b/core/mazorca-boilerplate/mazorca.scss
@@ -3,13 +3,13 @@
 @import "node_modules/mazorca-core/_mazorca-core.scss";
 
 //===Configs===//
-@import "config/_config";
+@import "mazorca/config/_config";
 
 //===Vendor===//Css begins compling here
 	// @import "vendor/bootstrap/_bootstrap.scss";
 
 //===Mazorca===//
-@import "_elements";
-@import "_grid";//
-@import "_components";
-@import "_modules";
+@import "mazorca/_elements";
+@import "mazorca/_grid";//
+@import "mazorca/_components";
+@import "mazorca/_modules";
