wip actualización a mazorca 1.2.5

--- a/core/base/_basic-styles.scss
+++ b/core/base/_basic-styles.scss
@@ -27,7 +27,8 @@ body {
 	position: relative;
 	text-rendering: optimizeLegibility;  // mejor legibilidad
 	-webkit-font-smoothing: antialiased; // Hace la fuente más bonita
-	// font-size: $base-px;
+	font-size: 14px;
+	font-family: BlissPro;
 }
 
 strong{font-weight: bold;}
