--- a/core/mazorca-boilerplate/mazorca.scss
+++ b/core/mazorca-boilerplate/mazorca.scss
@@ -12,4 +12,5 @@
 @import "mazorca/_elements";
 @import "mazorca/_grid";//
 @import "mazorca/_components";
+@import "mazorca/_theme-helpers";
 @import "mazorca/_modules";
