--- a/core/mixins/_aspect-ratio.scss
+++ b/core/mixins/_aspect-ratio.scss
@@ -14,7 +14,7 @@
     padding-top: ($height / $width) * 100%;
   }
 
-  > &__aspect-ratio-container {
+   &__aspect-ratio-container {
     position: absolute;
     top: 0;
     left: 0;
