--- a/core/mixins/_bg-cover.scss
+++ b/core/mixins/_bg-cover.scss
@@ -14,4 +14,5 @@
     -moz-background-size: cover;
     -o-background-size: cover;
 	background-position: $position;
+	background-repeat: no-repeat;
 }
