--- a/core/mixins/_mixins.scss
+++ b/core/mixins/_mixins.scss
@@ -41,6 +41,8 @@
 @import "_under";// @media mixin
 @import "_over";// @media mixin
 
+//======== Width ========\\
+@import "_width";
 
 //======== Stylings ========\\
 @import "_bg-cover";//Sets background cover
@@ -49,7 +51,23 @@
 @import "_input-styling";// Fully style an input with a single line
 @import "_selection";// Fully style an input with a single line
 @import "_selected-link";
+@import "_link-states";
+@import "_reset-button-styles";
+@import "_size";
 
 //======== Transitions ========\\
 @import "transitions/_hover-transition";
 @import "transitions/_make-transition";
+@import "transitions/_ease-transition";
+
+//======== Grid ========\\
+@import "grid/_row";
+@import "grid/_container";
+@import "grid/_unary-col";
+@import "grid/_binary-cols";
+@import "grid/_binary-column-padding";
+@import "grid/_binary-column-maker";
+@import "grid/_ternary-cols";
+@import "grid/_ternary-column-padding";
+@import "grid/_ternary-column-maker";
+@import "grid/_flex-static-col-with-adaptable-cols";
