--- a/core/mixins/preconfig-mixins/_custom-appearance.scss
+++ b/core/mixins/preconfig-mixins/_custom-appearance.scss
@@ -4,7 +4,7 @@
 ///
 @mixin custom-appearance($boolean){
     @if $boolean == true{
-            -moz-appereance:none;
+    		-moz-appearance: none;
             -webkit-appearance: none;
     }
 }
