--- a/core/mixins/preconfig-mixins/_placeholder-color.scss
+++ b/core/mixins/preconfig-mixins/_placeholder-color.scss
@@ -1,14 +1,26 @@
 
 /// Sets the color for a plahceholder
-/// 
-/// @param {string} $placeholder_color
+///
+/// @param {string} $color
 /// @since 1.0.0
 /// @author Diego Villaseñor
 /// @todo Add @content capabilities
 
-@mixin placeholder($placeholder_color){
-	::-webkit-input-placeholder {color: $placeholder_color;}
-	:-moz-placeholder {color: $placeholder_color;}/// Firefox 18- 
-	::-moz-placeholder {color: $placeholder_color;}///Firefox 19+ 
-	:-ms-input-placeholder {color: $placeholder_color;}
+@mixin placeholder($placeholdercolor){
+	::-webkit-input-placeholder {
+		color: $placeholdercolor;
+		@content;
+	}
+	:-moz-placeholder {
+		color: $placeholdercolor;
+		@content;
+	}/// Firefox 18-
+	::-moz-placeholder {
+		color: $placeholdercolor;
+		@content;
+	}///Firefox 19+
+	:-ms-input-placeholder {
+		color: $placeholdercolor;
+		@content;
+	}
 }
