--- a/core/mixins/preconfig-mixins/_ultraligero-legacy-mixins.scss
+++ b/core/mixins/preconfig-mixins/_ultraligero-legacy-mixins.scss
@@ -40,10 +40,10 @@
 	@font-face {
 		font-family: '#{$font-family}';
 		src: url('#{$font-filename}.eot');
-    	src: url('#{$font-filename}.eot?#iefix') format('embedded-opentype'),
-         url('#{$font-filename}.woff') format('woff'),
-         url('#{$font-filename}.ttf') format('truetype'),
-         url('#{$font-filename}.svg##{$font-filename}') format('svg');
+    	src: url('#{$font-filename}.eot?#iefix') format('embedded-opentype');
+		src: url('#{$font-filename}.woff') format('woff');
+        src: url('#{$font-filename}.ttf') format('truetype');
+        src: url('#{$font-filename}.svg##{$font-filename}') format('svg');
 		font-weight: $font-weight;
 		font-style: $font-style;
 		font-stretch: $font-stretch;
