--- a/core/mixins/transitions/_make-transition.scss
+++ b/core/mixins/transitions/_make-transition.scss
@@ -15,7 +15,7 @@
   @each $speed in $speeds {
     $class: 'transition-#{$speed}';
     @if($prop != all) {
-     $class:  'transitions-#{$prop}-#{$speed}';
+     $class:  'transition-#{$prop}-#{$speed}';
     }
     
     #{$selector_type}#{$class} {
