updates Sass Docs to 1.3.0

--- a/core/mixins/grid/_ternary-column-padding.scss
+++ b/core/mixins/grid/_ternary-column-padding.scss
@@ -1,5 +1,5 @@
 /// Crea 3 paddings, 1 para cada elemento ABA
-/// @require    padding distriuido proporcionalmente: El padding total que tiene A y que tiene B deben ser iguales
+///  padding distriuido proporcionalmente: El padding total que tiene A y que tiene B deben ser iguales
 ///             A p_total = padA = 1 padding
 ///             B p_total = padB  = 2 paddings, B tiene padding derecha e izquierda
 ///             Si: 50/3 = 16.666666
