resuelve pequeño problema con export-to-json

--- a/core/mixins/_mixins.scss
+++ b/core/mixins/_mixins.scss
@@ -22,6 +22,7 @@
 
 //======== Importing ========\\
 @import "_exports";// An import once module
+@import "_export-to-scss";// An import once module
 
 //======== Inserting content ========\\
 @import "_delimiter";// Creates css delimiters for breadcrumbs,links, or else.
