adds factory for 4 column layout

--- a/core/mixins/_mixins.scss
+++ b/core/mixins/_mixins.scss
@@ -71,4 +71,7 @@
 @import "grid/_ternary-cols";
 @import "grid/_ternary-column-padding";
 @import "grid/_ternary-column-maker";
+@import "grid/_cuaternary-cols";
+@import "grid/_cuaternary-column-padding";
+@import "grid/_cuaternary-column-maker";
 @import "grid/_flex-static-col-with-adaptable-cols";
