--- a/core/mazorca-boilerplate/mazorca/config/_inputs.scss
+++ b/core/mazorca-boilerplate/mazorca/config/_inputs.scss
@@ -34,7 +34,7 @@ $selectAppearance:  true;/*similar as above but for selects*/
 /*Input Elements' Params*/
 
 
-//The meat of it
+//The meat of it, don't play with it
 input, textarea{
     background-color: $input_bg_color;
     color: $text_color;
