--- a/core/mazorca-boilerplate/mazorca/config/_colors.scss
+++ b/core/mazorca-boilerplate/mazorca/config/_colors.scss
@@ -1,20 +1,14 @@
 $colors: (
 	base:	#312822,
-	dark:	#0B1119,
 	white:	#FFFFFF,
-	light: 	#F5F3EF,
-	brown: 	#876B3C,
-	dark-brown: #886B3C,
-	ocher:	#4F3A14,
-	gold: 	#876A3B,
-	beige: 	#BAAD99
 	);
 
 @function c($color:base) {
 	@return map-get($colors, $color);
 }
 
+//no borrar
 $colorForeground: c();
 $colorBackground: c(white);
-$colorFeatured: c(azul);
+$colorFeatured: c(base);
 $colorError: #8A1010;
