--- a/core/mazorca-boilerplate/mazorca/config/_fonts.scss
+++ b/core/mazorca-boilerplate/mazorca/config/_fonts.scss
@@ -4,22 +4,13 @@
  * Declare fonts using the Mixin
  */
 
-@include declara-font-face(DTLNobelT, '../fonts/DTLNobelT', normal);
-@include declara-font-face(DTLNobelT, '../fonts/DTLNobelT-Light', 200);
-@include declara-font-face(DTLNobelT, '../fonts/DTLNobelT-Bold', bold);
-
-@include declara-font-face(Marion, '../fonts/DTLNobelT-Bold', normal, italic);
-
-
 /// Refer to font families through mapped variables.
 /// Font families must be written as lists, that is, between parenthesis.
 ///
 ///
 $fonts:(
-		sans:	('Nobel', sans-serif),
-		inputs: ('Marion', serif),
-		serif: 	('Leitura', serif)
-	);
+	sans:	(sans-serif),
+);
 
 @function f($font) {
 	@return map-get($fonts, $font);
