--- a/core/mazorca-boilerplate/mazorca/elements/_divisor.scss
+++ b/core/mazorca-boilerplate/mazorca/elements/_divisor.scss
@@ -1,18 +1,5 @@
-%divisor{
-	width: 100%;
-	padding-top: s(7);
-	border-bottom: 1px solid c();
-
-	// @include under(sm) {
-	// 	padding-top: 22px;
-	// }
-
-}
-
-.divisor { @extend %divisor};
-
-%order-divisor,
-.order-divisor {
+%divisor,
+.divisor {
 	width: 100%;
 	border-bottom: 1px solid c();
 }
