agrega pentary columns y corrije error en cuaternary columns

--- a/core/mixins/_mixins.scss
+++ b/core/mixins/_mixins.scss
@@ -74,4 +74,7 @@
 @import "grid/_cuaternary-cols";
 @import "grid/_cuaternary-column-padding";
 @import "grid/_cuaternary-column-maker";
+@import "grid/_pentary-cols";
+@import "grid/_pentary-column-padding";
+@import "grid/_pentary-column-maker";
 @import "grid/_flex-static-col-with-adaptable-cols";
